--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -56,18 +56,19 @@
                     {% endif %} */
                 }
                 section {
-                    padding-left: 5px;
+                    padding-left: 50px;
                     width: 100%;
                     display: flex;
                     flex-direction: column;
-                    justify-content: space-between;
-                    align-items: center;
+                    justify-content: center;
+                    align-items: flex-start;
                 }
                 .info {
-                    margin-top: 16px;
+                    margin-top: 0px;
+                    text-align: left;
                     display: flex;
                     flex-direction: column;
-                    align-items: center;
+                    align-items: flex-start;
                     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
                 }
                 .top {
@@ -75,7 +76,7 @@
                     align-items: center;
                 }
                 h1 {
-                    font-size: 20px;
+                    font-size: 30px;
                     font-weight: 600;
                     white-space: nowrap;
                     text-overflow: ellipsis;
@@ -92,8 +93,8 @@
                     {% endif %}
                 }
                 p {
-                    margin-top: 5px;
-                    font-size: 18px;
+                    margin-top: 0px;
+                    font-size: 20px;
                     font-weight: 500;
                     white-space: nowrap;
                     text-overflow: ellipsis;
