--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -41,14 +41,14 @@
                     {% endif %}
                 }
                 .cover {
-                    width: 120px;
-                    height: 120px;
+                    width: 100px;
+                    height: 100px;
                     {% if spin %}                    border-radius: 50%;
                     animation: spin 0ms -800ms linear infinite;
                     animation-duration: 10s;
                     {% else %}
                     border-radius: 5px;
-                    padding-right: 30px;
+                    padding: 0 10px;
                     /* {% endif %} 
                     {% if theme == 'dark' %} 
                         box-shadow: 0 0 10px 5px #1b2027; 
@@ -78,7 +78,7 @@
                     align-items: center;
                 }
                 h1 {
-                    font-size: 30px;
+                    font-size: 20px;
                     font-weight: 600;
                     white-space: nowrap;
                     text-overflow: ellipsis;
@@ -96,7 +96,7 @@
                 }
                 p {
                     margin-top: 0px;
-                    font-size: 20px;
+                    font-size: 15px;
                     font-weight: 500;
                     white-space: nowrap;
                     text-overflow: ellipsis;
@@ -110,8 +110,8 @@
                     {% endif %}
                 }
                 .logo {
-                    width: 24px;
-                    height: 24px;
+                    width: 20px;
+                    height: 20px;
                 }
                 /* .bar-container {
                     display: flex;
