--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -57,7 +57,7 @@
                     {% endif %} */
                 }
                 section {
-                    padding-left: 30px;
+                    padding-left: 10px;
                     width: 100%;
                     display: flex;
                     flex-direction: column;
@@ -157,7 +157,7 @@
                         <div class="info">
                             <div class="top">
                                 {% if not scan_code %}
-                                    <img class="logo" src="data:image/png;base64, {{logo}}" alt="Spotify Logo" />
+                                    <!-- <img class="logo" src="data:image/png;base64, {{logo}}" alt="Spotify Logo" /> -->
                                 {% endif %}
                                 <h1>{{song}}</h1>
                             </div>
