--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -70,12 +70,18 @@
                     text-align: left;
                     display: flex;
                     flex-direction: column;
+                    justify-content: space-between;
                     align-items: flex-start;
                     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+                }
+                .head {
+                    font-size: 10px;
+                    color: #c7c9c8;
                 }
                 .top {
                     display: flex;
                     align-items: center;
+                    font-weight: 500;
                 }
                 h1 {
                     font-size: 20px;
@@ -155,6 +161,7 @@
                     <img class="cover" src="data:image/png;base64, {{image}}" alt="Cover Image" />
                     <section>
                         <div class="info">
+                            <p class="head">Now Playing/Recently Played</p>
                             <div class="top">
                                 {% if not scan_code %}
                                     <!-- <img class="logo" src="data:image/png;base64, {{logo}}" alt="Spotify Logo" /> -->
