--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -161,7 +161,9 @@
                     <img class="cover" src="data:image/png;base64, {{image}}" alt="Cover Image" />
                     <section>
                         <div class="info">
-                            <p class="head">Now Playing/Recently Played</p>
+                            <div class="info--head">
+                                <p class="head">Now Playing/Recently Played</p>
+                            </div>
                             <div class="top">
                                 {% if not scan_code %}
                                     <!-- <img class="logo" src="data:image/png;base64, {{logo}}" alt="Spotify Logo" /> -->
