--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -58,6 +58,8 @@
                 }
                 section {
                     padding-left: 10px;
+                    padding-top: 10px;
+                    padding-bottom: 10px;
                     width: 100%;
                     display: flex;
                     flex-direction: column;
